# prism-2d

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/resources/: default.frag  default.vertex
include/glad/: glad.h
include/lib/: Shader.h  vector2.h
prism/: CMakeLists.txt
prism/include/prism/: application.h  log.h  shader.h  texture.h  vector2.h
prism/src/: application.cpp  glad.c  shader.cpp  texture.cpp
resources/: default.frag
src/: Shader.cpp  vector2.cpp
